; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_count-objects.c_count_loose.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_count-objects.c_count_loose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.stat = type { i32 }

@loose_size = common dso_local global i32 0, align 4
@loose = common dso_local global i32 0, align 4
@verbose = common dso_local global i64 0, align 8
@packed_loose = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*, i8*, i8*)* @count_loose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @count_loose(%struct.object_id* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.object_id*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.stat, align 4
  store %struct.object_id* %0, %struct.object_id** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i64 @lstat(i8* %8, %struct.stat* %7)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %16, label %11

11:                                               ; preds = %3
  %12 = getelementptr inbounds %struct.stat, %struct.stat* %7, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @S_ISREG(i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %11, %3
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @loose_garbage(i8* %17)
  br label %39

19:                                               ; preds = %11
  %20 = getelementptr inbounds %struct.stat, %struct.stat* %7, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @on_disk_bytes(i32 %21)
  %23 = load i32, i32* @loose_size, align 4
  %24 = sext i32 %23 to i64
  %25 = add nsw i64 %24, %22
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* @loose_size, align 4
  %27 = load i32, i32* @loose, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* @loose, align 4
  %29 = load i64, i64* @verbose, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %38

31:                                               ; preds = %19
  %32 = load %struct.object_id*, %struct.object_id** %4, align 8
  %33 = call i64 @has_object_pack(%struct.object_id* %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %31
  %36 = load i32, i32* @packed_loose, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* @packed_loose, align 4
  br label %38

38:                                               ; preds = %35, %31, %19
  br label %39

39:                                               ; preds = %38, %16
  ret i32 0
}

declare dso_local i64 @lstat(i8*, %struct.stat*) #1

declare dso_local i32 @S_ISREG(i32) #1

declare dso_local i32 @loose_garbage(i8*) #1

declare dso_local i64 @on_disk_bytes(i32) #1

declare dso_local i64 @has_object_pack(%struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
